# LabelKit

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  labelkit-design-v1.html  pyproject.toml
docs/: CONTRACTS.md  E2E-FINDINGS.md
docs/design/: labelkit-design-v1.html
docs/dev/: E2E-FINDINGS.md  (+11 more)
examples/: config.toml
labelkit/: __init__.py  annotate.py  classify.py  cli.py  dedup.py  emitter.py  errors.py  extract.py  generate.py  hooks.py  ingest.py  llm_client.py  obslog.py  orchestrator.py  quality.py  schema_engine.py  segment.py  stage.py  types.py  verify.py
spec/: 00-frontmatter.md  10-ch1-overview.md  20-ch2-overall-design.md  30-ch3-modules-intro.md  301-m1-config.md  302-m2-ingest.md  303-m3-dedup.md  304-m4-qualityqurating.md  305-m5-annotate.md  306-m6-generate.md  307-m7-verify.md  308-m8-schema-engine.md  309-m9-llm-client.md  310-m10-orchestrator.md  311-m11-emitter.md  312-m12-logging.md  313-m13-classify.md  314-m14-segment.md  315-m15-extract.md  316-m16-stitch.md  40-ch4-data-structures.md  50-ch5-config-spec.md  60-ch6-io-formats.md  70-ch7-logging.md  80-ch8-nongoals-roadmap.md  85-ch9-references.md  90-appendix-a-rubrics.md
tests/: conftest.py  hook_samples.py  test_annotate.py  test_classify.py  test_cli.py  test_config.py  test_dedup.py  test_emitter.py  test_extract.py  test_generate.py  test_hooks.py  test_ingest.py  test_key_pool.py  test_llm_client.py  test_obslog.py  test_orchestrator.py  test_quality.py  test_schema_engine.py  test_segment.py  test_stream_ingest.py  test_types.py  test_verify.py
tools/: build_design_doc.py
(+203 files in other folders)
