[project]
name = "labelkit"
version = "1.0.0"
description = "LLM-powered stateless batch pipeline for dedup, quality scoring, auto-annotation and generation of collected data"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "jsonschema>=4.21",
    "datasketch>=1.6",
    "Pillow>=10.0",
    "imagehash>=4.3",
    "json-repair>=0.30",
    "numpy>=1.26",
    "rich>=13.7",
]

[project.scripts]
labelkit = "labelkit.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["labelkit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: hits the real z.ai LLM endpoint (glm-5.2); auto-skipped without LABELKIT_ZAI_KEY",
]

[tool.uv]
package = true
